[build-system]
requires = ["setuptools>=72.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmpretrain"
description = "OpenMMLab Model Pretraining Toolbox and Benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
version = "1.2.0"
authors = [
    {name = "MMPretrain Contributors", email = "openmmlab@gmail.com"},
    {name = "MGAM", email = "312065559@qq.com"}
]
keywords = [
    "computer vision",
    "image classification",
    "unsupervised learning",
    "self-supervised learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mmcv",
]

[project.urls]
Homepage = "https://github.com/open-mmlab/mmpretrain"

[tool.setuptools.packages.find]
where = ["."]
include = ["mmpretrain"]


